# trading-bot-mvp

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: config.py  main.py
backend/analysis/: sweep.py
backend/api/: routes.py
backend/data/: downloader.py
backend/execution/: __init__.py  bot.py  exchange.py
backend/models/: features.py  hmm.py
backend/strategy/: backtest.py  metrics.py  signals.py
docs/: analysis_guide.md  trading_operations_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: LoadingSpinner.tsx  MetricCard.tsx  Plot.tsx  Warning.tsx
frontend/src/sections/: EquityCurves.tsx  LivePortfolio.tsx  ParameterTable.tsx  RegimeTimeline.tsx  SharpeHeatmap.tsx  TransitionMatrix.tsx
frontend/src/types/: index.ts
